--- a/root/index.html
+++ b/root/index.html
@@ -12,4 +12,7 @@
 <br/>
 <br/>
 <div align="center"><img src="./test1.jpg" title="awsl"/></div>
+<div align="center"><img src="./picture.gif" title="awsl"/></div>
+<div align="center"><img src="./video.gif" title="awsl"/></div>
+<div align="center"><img src="./frame.jpg" title="awsl"/></div>
 </html>
