--- a/root/index.html
+++ b/root/index.html
@@ -2,16 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>awsl</title>
+        <title>WebServer</title>
     </head>
-    <body><br/>
-<br/>
-<div align="center"><font size="5"> <strong>欢迎观临本WebServer.</strong></font></div>
-<br/>
-<!--<div  align="center">a w s l</div>-->
-<br/>
-<br/>
-<div align="center"><img src="./picture.gif" title="awsl"/></div>
-<div align="center"><img src="./video.gif" title="awsl"/></div>
-<div align="center"><img src="./frame.jpg" title="awsl"/></div>
+    <body>
+    <br/>
+    <br/>
+    <div align="center"><font size="5"> <strong>欢迎访问</strong></font></div>
+	<br/>
+		<br/>
+		<form action="0" method="post">
+ 			<div align="center"><button type="submit">新用户</button></div>
+                </form>
+		<br/>
+                <form action="1" method="post">
+                        <div align="center"><button type="submit" >已有账号</button></div>
+                </form>
+                <div align="center"><img src="./video.gif" title="awsl"/></div>
+                <div align="center"><img src="./frame.jpg" title="awsl"/></div>
+		
+        </div>
+    </body>
 </html>
